@@ -3,6 +3,9 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2006/08/28
+	* Applied Mpeg's work on GS [Toms]
+	  ( http://gpegon.free.fr/ea/gunslinger_08-28-06_mpeg.txt )
 2006/08/27
 	* Fixed undefined reference to 'malloc_set' in log.c [Toms]
 	* Updated svn-revision reading, now it can read the new svn file system [Toms]
